--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon ./server/index.js",
-    "build": "node ./server/index.js"
+    "dev": "nodemon index.js",
+    "build": "node index.js"
   },
   "keywords": [],
   "author": "",
